# datashuttle-playground

./: .dockerignore  CHANGELOG.md  Cargo.toml  LICENSE  PHASE_5C_HANDOFF.md  README.md  deny.toml  release-please-config.json
.github/workflows/: acceptance.yaml  ci.yml  commitlint.yml  release-please.yml  release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
acceptance/: README.md  clickhouse-snapshot.acceptance.sh  file-ingestion.acceptance.sh  full-demo.acceptance.sh  mongodb-cdc.acceptance.sh  mysql-cdc.acceptance.sh  postgres-cdc.acceptance.sh  realtime-demo.acceptance.sh  run_all.sh  run_scenario.sh
crates/datashuttle-playground/: Cargo.toml
crates/datashuttle-playground-server/: Cargo.toml
crates/datashuttle-playground-server/src/: api_client.rs  config.rs  dispatcher.rs  handlers.rs  identity.rs  lib.rs  main.rs  router.rs
crates/datashuttle-playground-server/tests/: handlers_smoke.rs
crates/datashuttle-playground/src/: lib.rs  manifest.rs  metrics.rs  quota.rs  sessions.rs  tcp.rs
docker/: Dockerfile  docker-compose.yml
docs/: playground.md
examples/: README.md  STATUS.md  docker-compose.yml  manifest.json  manifest.schema.json
examples/clickhouse-snapshot/: .gitignore  README.md  cluster-config.xml  datashuttle.yaml  demo.sh  docker-compose.yml  generate-changes.sql  init-distributed.sql  init-local.sql  init.sql  seed.sql  shuttle.sql  verify.sh
examples/clickhouse-snapshot/actions/: bad-write.sql  load-100k.sql
examples/clickhouse-snapshot/k8s/: README.md  generate-load.sh  infra.yaml  kind-config.yaml  namespace.yaml  polaris-init-job.yaml  setup.sh  teardown.sh  values-clickhouse-demo.yaml  verify.sh
examples/file-ingestion/: README.md  generate-data.py  shuttle-csv.sql  shuttle-json.sql  shuttle-parquet.sql  verify.sh
examples/file-ingestion/actions/: bad-encoding.csv
examples/file-ingestion/data/: customers.csv  transactions.json
examples/full-demo/: README.md  dashboard-queries.sql  generate-load.sh  setup.sh  teardown.sh
examples/mongodb-cdc/: README.md  generate-changes.js  init.js  shuttle.sql  verify.sh
examples/mongodb-cdc/actions/: evolve-nested.js  insert-nested.js
examples/mysql-cdc/: README.md  generate-changes.sql  init.sql  shuttle.sql  verify.sh
examples/mysql-cdc/actions/: catchup.sql
examples/playground/cassandra/: init.cql  shuttle.sql
examples/playground/cassandra/actions/: load-wide.sh
examples/playground/chaos/: heal.sh  setup-proxies.sh  toxic-latency.sh  toxic-loss.sh
examples/playground/clickhouse-snapshot/: init.sql  shuttle.sql
examples/playground/clickhouse-snapshot/actions/: bad-write.sql  load-100k.sql
examples/playground/dynamodb/: init.sh  shuttle.sql
examples/playground/dynamodb/actions/: force-expire.sh  put-items.sh
examples/playground/file-ingestion/: shuttle-csv.sql
examples/playground/kinesis/: init.sh  shuttle.sql
examples/playground/kinesis/actions/: merge-shards.sh  produce.sh  split-shard.sh
examples/playground/large-payload/: init.sql  shuttle.sql
examples/playground/large-payload/actions/: insert-50mb.sh
examples/playground/mongodb-cdc/: shuttle.sql
examples/playground/mysql-cdc/: init.sql  shuttle.sql
examples/playground/mysql-cdc/actions/: catchup.sql
examples/playground/postgres-cdc/: shuttle-backfill.sql  shuttle.sql
examples/playground/redis-streams-cdc/: init.sql  shuttle.sql
examples/playground/redis-streams-cdc/actions/: produce-burst.sql
examples/playground/redis-streams-events/: init.sql  shuttle.sql
examples/playground/redis-streams-events/actions/: xadd-more.sql
examples/playground/rest-api/: init.sql  shuttle.sql
examples/playground/wiremock/mappings/: users.json
examples/polaris-config/: application.properties
examples/postgres-cdc/: README.md  demo.sh  docker-init.sql  generate-changes.sql  generate_data.sql  init.sql  shuttle-backfill.sql  shuttle.sql  verify.sh
examples/postgres-cdc/actions/: attach-line-items.sql  burst-100.sql  delete-order.sql  insert-order.sql  live-tick.sql  mark-paid.sql  seed-customer.sql  seed-product.sql  update-order.sql
examples/realtime-demo/: README.md  dashboard-server.py  dashboard.py  demo.sh  docker-compose.yml  producer.py  setup-shuttle.sql
examples/realtime-demo/scenarios/kafka-json/: poison-event.raw  shuttle.sql  valid-event.json
examples/realtime-demo/scenarios/kafka-throughput/: event.json  shuttle.sql
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
