[workspace]
members = [
    "crates/datashuttle-playground",
    "crates/datashuttle-playground-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "LicenseRef-Proprietary"
repository = "https://github.com/evgenyestepanov-star/datashuttle-playground"
homepage = "https://github.com/evgenyestepanov-star/datashuttle-playground"
keywords = ["datashuttle", "playground", "sandbox", "demo"]
categories = ["database", "development-tools"]

[workspace.dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "limit"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"

prometheus = { version = "0.13", features = ["process"] }
sha2 = "0.10"

# TCP-backed source dispatcher (Phase 5.C extraction — moved out of
# `datashuttle-cloud::playground` into `datashuttle-playground-server`).
# Versions pinned to match the cloud workspace so a shared `Cargo.lock`
# resolution across this repo + datashuttle-cloud unifies on one set.
futures = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid", "json", "migrate"] }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
