[package]
name = "datashuttle-playground-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone HTTP server for the DataShuttle playground."

[[bin]]
name = "datashuttle-playground-server"
path = "src/main.rs"

[dependencies]
datashuttle-playground = { path = "../datashuttle-playground" }

axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
prometheus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
