[package]
name = "datashuttle-playground-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone HTTP server for the DataShuttle playground."

[lib]
name = "datashuttle_playground_server"
path = "src/lib.rs"

[[bin]]
name = "datashuttle-playground-server"
path = "src/main.rs"

[dependencies]
datashuttle-playground = { path = "../datashuttle-playground" }

axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
prometheus.workspace = true

# Phase 5.C — TCP-backed source dispatcher moved here from
# `datashuttle-cloud::playground`. The trait + safety validators live
# in the foundation lib (`datashuttle-playground::tcp`); this binary
# owns the concrete sqlx + mysql_async pool implementation.
async-trait.workspace = true
futures.workspace = true
sqlx.workspace = true
mysql_async.workspace = true

# Phase 5.C — session handlers: identity middleware, HTTP callbacks
# to OSS api, source-SQL shell dispatch, deterministic UUIDs.
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tower.workspace = true
